--- a/package.json
+++ b/package.json
@@ -23,6 +23,6 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
-  "main": "server.index.js",
-  "proxy": "http://localgost:3035"
+  "main": "server/index.js",
+  "proxy": "http://localhost:3035"
 }
